# Social-Monkey

./: .gitignore  BERTWEET_INTEGRATION_GUIDE.md  CLAUDE.md  OVERVIEW_DASHBOARD_IMPLEMENTATION.md  PHASE4_CHECKLIST.md  PROJECT_SUMMARY.md  Procfile  QUICKSTART.md  README.md  SECURITY_ASSESSMENT.md  SECURITY_IMPLEMENTATION_GUIDE.md  SECURITY_SUMMARY.md  TEST_OVERVIEW_DASHBOARD.md  bertweet_goemotions_complete_analysis.md  requirements.txt
backend/: .env.example  .gitignore  README.md  Social-Monkey - Shortcut.lnk  context_aware_slang_detection.ipynb  fine-tune-bert-on-goemotions.ipynb  main.py  pyproject.toml  pytest.ini  requirements.txt  slang_rich_dictionary.json  test_complete_pipeline.py  test_rapidapikey.py  test_slang_fix.py  twitter_rate_limits.json
backend/app/analysis/: __init__.py  emotion_engine.py  slang_detector.py  slang_normalizer.py
backend/app/core/: config.py  middleware.py  security.py
backend/app/db/: session.py
backend/app/models/: models.py
backend/app/schemas/: social.py  user.py
backend/app/services/: twitter_service.py
backend/app/utils/: encryption.py  preprocessing.py  sql_protection.py
backend/docs/diagrams/: README.md  activity_ingestion.mmd  activity_oauth.mmd  architecture_basic.mmd  architecture_updated.md  (+15 more)
backend/models/: .gitkeep  README.md
backend/models-notebooks/: context-aware-slang-detection.ipynb  slang-ner-model.ipynb
backend/tests/: TESTING_GUIDE.md  Tests_report.html  __init__.py  conftest.py  generate_presentation_report.py  test_auth.py  test_emotion_engine.py  test_preprocessing.py  test_slang_detector.py
(+47 files in other folders)
